tests/testcases/02-not_enum.stderr
error: expected enum or match expression
 --> $DIR/02-not_enum.rs:1:1
  |
1 | #[proconio_enum_query::derive_query]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in an attribute macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected enum or match expression
 --> $DIR/02-not_enum.rs:6:1
  |
6 | #[proconio_enum_query::derive_query]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in an attribute macro (in Nightly builds, run with -Z macro-backtrace for more info)
